Updated to Junit 5